--- a/vroom/Views/Shared/_LoginPartial.cshtml
+++ b/vroom/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
                 <a class="nav-link" id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li class="nav-item active">
-                <form id="logoutForm" class="nav-link py-0" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <form id="logoutForm" class="nav-link py-0" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Bike", new { area = "" })">
                     <button id="logout" type="submit" class="nav-link btn btn-link border-0">Logout</button>
                 </form>
             </li>
